// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core drop down Can render a disabled value 1`] = `
<div
  className="dropdown-container"
>
  <span
    className="dropdown-selector"
    data-cy="-dropdown"
  >
    <HTMLSelect
      disabled={false}
      onChange={[Function]}
      style={
        Object {
          "minWidth": "120px",
          "width": "120px",
        }
      }
      title="undefined"
      value="UNSELECTED_CUSTOM_VALUE"
    >
      <option
        disabled={true}
        key="test"
        value="test"
      >
        test
      </option>
      <option
        disabled={false}
        key="foo"
        value="foo"
      >
        foo
      </option>
      <option
        disabled={false}
        key="bar"
        value="bar"
      >
        bar
      </option>
      <option
        key="UNSELECTED_CUSTOM_VALUE"
        value="UNSELECTED_CUSTOM_VALUE"
      >
        Custom
      </option>
    </HTMLSelect>
  </span>
</div>
`;

exports[`Core drop down Can render custom value 1`] = `
<div
  className="dropdown-container"
>
  <span
    className="dropdown-selector"
    data-cy="-dropdown"
  >
    <HTMLSelect
      disabled={false}
      onChange={[Function]}
      style={
        Object {
          "minWidth": "120px",
          "width": "120px",
        }
      }
      title="undefined"
      value="UNSELECTED_CUSTOM_VALUE"
    >
      <option
        disabled={false}
        key="test"
        value="test"
      >
        Test
      </option>
      <option
        disabled={false}
        key="foo"
        value="foo"
      >
        Foo
      </option>
      <option
        disabled={false}
        key="bar"
        value="bar"
      >
        Bar
      </option>
      <option
        key="UNSELECTED_CUSTOM_VALUE"
        value="UNSELECTED_CUSTOM_VALUE"
      >
        Custom
      </option>
    </HTMLSelect>
  </span>
</div>
`;

exports[`Core drop down Renders 1`] = `<div />`;

exports[`Core drop down Renders with label 1`] = `
<div>
  <div
    class="dropdown-container"
  >
    <span
      class="dropdown-label"
    >
      best label ever: 
    </span>
    <span
      class="dropdown-selector"
      data-cy="best-label-ever-dropdown"
    >
      <div
        class="bp4-html-select"
      >
        <select
          style="min-width: 120px; width: 120px;"
          title="undefined"
        >
          <option
            value="test"
          >
            test
          </option>
          <option
            value="foo"
          >
            foo
          </option>
          <option
            value="bar"
          >
            bar
          </option>
        </select>
        <span
          class="bp4-icon bp4-icon-double-caret-vertical"
          icon="double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              Open dropdown
            </desc>
            <path
              d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`Core drop down Renders without label 1`] = `<div />`;
